--- a/app/assets/styles/modules/_generic-content-container.css
+++ b/app/assets/styles/modules/_generic-content-container.css
@@ -2,7 +2,7 @@
 
   p {
     line-height: 1.5;
-    margin: 1.3rem 0;
+    margin: 0 0 1.3rem 0;
     font-size: 1.125rem;
     font-weight: 300;
   }
