files missing from previous commit :)

--- a/gulp/templates/sprite.css
+++ b/gulp/templates/sprite.css
@@ -3,6 +3,6 @@
     width: {{width.outer}}px;
     height: {{height.outer}}px;
     background-image: url('/temp/sprite/css/{{{sprite}}}');
-    background-position: {{position.relative.xy}};
+    background-position: {{position.relatve.xy}};
   }
 {{/shapes}}
